--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
-baseURL: http://example.org/                  # URL of the website
+baseURL: http://example.org/                  # Hosting location.
 languageCode: en-us                           # Locale
 title: Acme Corporation                       # Name of the website
+publishDir: docs                              # Output folder
 theme: github.com/hugoinaction/Eclectic       # Name of the theme
 author:                                       # Information about the website author
   facebook: "https://facebook.com/example"
@@ -13,10 +14,10 @@ author:                                       # Information about the website au
 
 menu:                                         # Menu placement
   main:                                       #    - Name of the menu
-    - identifier: about                       #        - Identifier
-      name: About                             #        - Display name (theme specific key)
-      url: /about                             #        - Target URL
-      weight: 1                               #        - Sorting order
+    - identifier: about                       #       - Identifier
+      name: About                             #       - Display name (theme specific key)
+      url: /about                             #       - Target URL
+      weight: 1                               #       - Sorting order
     - identifier: contact
       name: Contact
       url: /contact
@@ -26,9 +27,15 @@ params:                                       # Theme specific parameters
   copyright: "Copyright &copy; 2020 Acme Corporation. All Rights Reserved."
   footer:
     - title: About
-      content: Acme Corporation is the world's leading manufacturer of digital shapes.From squares and circles to triangles and hexagons, we have it all. Browse through our collection of various forms with different thickness and line styles. We shape the world. You live in it.
+      content: Acme Corporation is the world's leading manufacturer of digital shapes. From squares and circles to triangles and hexagons, we have it all. Browse through our collection of various forms with different thickness and line styles. We shape the world. You live in it.
     - title: Recent Blog Posts
       recents: blog
       recentCount: 7
     - title: Contact Us
-      contact: true”
+      contact: true
+  style: green
+  logo: image/logo.png
+  logo_small: image/logo.png
+  about_us: Acme Corporation is the world's leading manufacturer of digital shapes. From squares and circles to triangles and hexagons, we have it all. Browse through our collection of various forms with different thickness and line styles. We shape the world. You live in it.
+  recent_posts:
+    enable: true
