--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,11 @@ baseURL: http://example.org/                  # Hosting location.
 languageCode: en-us                           # Locale
 title: Acme Corporation                       # Name of the website
 publishDir: docs                              # Output folder
+enableEmoji: true                             # Enable Emojis in Markdown
+markup:                                       # Markup Options
+  highlight:                                  # Code highlighting defaults
+    lineNos: true                             # Enable line numbers
+author:                                       # Information about the website author
 theme: github.com/hugoinaction/Eclectic       # Name of the theme
 author:                                       # Information about the website author
   facebook: "https://facebook.com/example"
